tests/ui/asm/arm/exhausted-registers-issue-90815.stderr
error: inline assembly requires more registers than available
  --> $DIR/exhausted-registers-issue-90815.rs:38:10
   |
LL |         "mov {0}, r0",
   |          ^^^^^^^^^^^

error: aborting due to 1 previous error

